# test_task_bot

./: .gitignore  .pre-commit-config.yaml  README.md  data.sql  docker-compose.yaml  pg_db.env.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
bot/: Dockerfile  __main__.py  alembic.ini  message_texts.py  run_admin_panel.py
bot/admin/models/: __init__.py  consultation.py  mailing.py
bot/core/: config.py
bot/core/celery/: app.py  jobs.py
bot/core/enums/: __init__.py  mailing.py  response.py
bot/core/models/: __init__.py  base.py  consultation.py  engine.py  mailing.py  response.py  user.py
bot/core/models/mixins/: __init__.py  updated_at_mixin.py
bot/core/schemas/: consultation.py  mailings.py  user.py
bot/crud/: __init__.py  base.py  consultation.py  mailing.py  response.py  user.py
bot/filters/: __init__.py  chat_type.py
bot/keyboards/inline/: builders.py  common.py
bot/middlewares/: __init__.py  consultation_service.py  database.py  response_service.py  user_service.py
bot/migrations/versions/: 2025_02_19_2213-fcb797e9064c_create_users_table.py  2025_02_20_1130-292f6cb1210b_create_respones_table.py  2025_02_20_1300-bdb481426e46_create_consultations_table.py  2025_02_20_1309-f3fe46dcc20a_added_name_field_to_consultations_table.py  2025_02_20_1339-3c7421362ee8_create_mailings_table.py  2025_02_20_1504-dedc013e94b2_change_to_ts_with_timezone_time_field_.py
bot/routers/: __init__.py
bot/routers/callback_query/: user.py
bot/routers/message/: user.py
bot/services/: base.py  consultation.py  mailing.py  response.py  user.py
bot/states/: consultation.py
bot/utils/: bot.py  init_admin_panel.py
scripts/: entrypoint.sh
tests/: .env.test.example
tests/test_routers/: test_callback_query_router.py  test_message_router.py
tests/test_services/: test_consultation_service.py  test_response_service.py  test_user_service.py
tests/test_utils/: test_case_converter.py
